@@ -1,3 +1,9 @@
+2002-04-25  Pierre Muller  <muller@ics.u-strasbg.fr>
+
+	* p-exp.y: Also use new prev_lexptr variable
+	to improve error reporting. Based on Michael Snyder
+	2002-04-24 dated patch to c-exp.y.
+
 2002-04-25  Jason Thorpe  <thorpej@wasabisystems.com>
 
 	* alpha-tdep.c (alpha_breakpoint_from_pc): New function.
